objects/CSPOFA__Orchestration_Process__c.object
<CustomObject>
    <fields>
        <fullName>CSPOFA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Orchestration_Process_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Orchestration Process Template</label>
        <referenceTo>CSPOFA__Orchestration_Process_Template__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Parent_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Process</label>
        <referenceTo>CSPOFA__Orchestration_Process__c</referenceTo>
        <relationshipLabel>Child Processes</relationshipLabel>
        <relationshipName>Child_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low</fullName>
                </value>
                <value>
                    <fullName>2 - Normal</fullName>
                </value>
                <value>
                    <fullName>3 - High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Process_On_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Process_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Provide</fullName>
                </value>
                <value>
                    <fullName>Cease</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Downgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Processing_Mode__c</fullName>
        <description>Internal field for storing processing mode information</description>
        <externalId>true</externalId>
        <label>Processing Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Progress__c</fullName>
        <description>Describes the progress of the Process, in terms of milestones reached. Expressed as a percentage (e.g. &quot;25%&quot;).</description>
        <inlineHelpText>Describes the progress of the Process, in terms of milestones reached. Expressed as a percentage (e.g. &quot;25%&quot;). NOT TO BE EDITED MANUALLY.</inlineHelpText>
        <label>Progress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Root_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Process</label>
        <referenceTo>CSPOFA__Orchestration_Process__c</referenceTo>
        <relationshipLabel>Descendant Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__State__c</fullName>
        <description>Used internally by Orchestrator engine for tracking processing. Not to be changed manually.</description>
        <inlineHelpText>Used internally by Orchestrator engine for tracking processing. Not to be changed manually.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INITIALIZING</fullName>
                    <default>true</default>
                    <label>INITIALIZING</label>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                </value>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>TERMINATED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initializing</fullName>
                    <default>true</default>
                    <label>Initializing</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSPOFA__Subprocess_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subprocess Step</label>
        <referenceTo>CSPOFA__Orchestration_Step__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSPOFA__Subprocess_Type__c</fullName>
        <label>Subprocess Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__actual_date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSPOFA__confirmed_date__c</fullName>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSPOFA__jeopardy_created_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Put the process in jeopardy. This happens when Target Time is not met.</description>
        <inlineHelpText>Process is in jeopardy because the Target Time was not met.</inlineHelpText>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSPOFA__ola_remaining_time__c</fullName>
        <description>The amount of OLA time remaining after the OLA clock has been paused/stopped.
The value is always represented in miliseconds.</description>
        <inlineHelpText>The amount of OLA time remaining after the OLA clock has been paused/stopped.</inlineHelpText>
        <label>OLA Remaining Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSPOFA__target_date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSPOFA__target_date_time__c</fullName>
        <description>Target time to complete the process.</description>
        <inlineHelpText>Target time to complete the process.</inlineHelpText>
        <label>Target Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Credit_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note</label>
        <referenceTo>UPC_Credit_Note__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Service_Line_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Line Item</label>
        <referenceTo>csord__Service_Line_Item__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Subscription_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks true if case of a topnet case record type is closed</description>
        <label>Subscription Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Service on which process instance was invoked</description>
        <inlineHelpText>Lookup to the Service on which process instance was invoked</inlineHelpText>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Orchestration Processes</relationshipLabel>
        <relationshipName>Orchestration_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Orchestration Process</label>
    <listViews>
        <fullName>CSPOFA__All</fullName>
        <columns>NAME</columns>
        <columns>CSPOFA__Process_Type__c</columns>
        <columns>CSPOFA__Status__c</columns>
        <columns>CSPOFA__Account__c</columns>
        <columns>CSPOFA__Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>